# todo-mcp

./: AndroidManifest.xml  Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: main.rs
src/backends/: hook.rs  ipc.rs  iroh.rs  mcp.rs  mod.rs  multicast.rs  proto.rs
src/components/: collapsed_todo_tab.rs  expanded_todo_tab.rs  main_screen.rs  mod.rs  todo_item_row.rs  todo_tab.rs
src/tui/: colors.rs  input.rs  mod.rs  state.rs  ui.rs
